Fix footer from overlapping content

--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  overflow-y:auto;
 }
 
 header {
@@ -62,30 +63,46 @@ header h1 {
 .button-nav {
   padding: 20px;
   font-size: 25px;
+  position: relative;
+  cursor: pointer;
+}
+
+.button-nav:hover:after {
+  content: "";
+  background: #f43f5e;
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 3px;
+}
+
+.button-nav:hover {
+  text-decoration: underline whitesmoke solid 2px;
 }
 
 .main {
-margin-top: 5vh;
-margin-bottom: 50px;
-max-width: 700px;  
-display: flex;
+  margin-top: 5vh;
+  margin-bottom: 50px;
+  max-width: 700px;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   border: 1px solid black;
   background-color: rgba(22, 28, 44, 0.8);
-  
-
 }
+
+
 .home p {
-font-size: 22px;
-color: whitesmoke;
-padding: 10px;  
+  font-size: 22px;
+  color: whitesmoke;
+  padding: 10px;
 }
 .home img {
-width: 80%;
-opacity: 0.8;
-border-radius: 35%;
+  width: 80%;
+  opacity: 0.8;
+  border-radius: 35%;
 }
 
 footer {
@@ -93,11 +110,10 @@ footer {
   display: flex;
   align-items: center;
   margin-bottom: 0px;
-  position: absolute;
+  margin-top:auto;
   background-color: rgba(29, 37, 59, 0.8);
   border-top: 1px solid black;
-  bottom: 0;
-  left: 0;
+ 
   width: 100%;
   padding: 10px;
 }
